--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,20 +1,15 @@
 ---
 type: page
 title: About
-date: 2021-03-19
+date: 2022-11-23
 ---
 
-# Your Name
-
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+# Nojihata
 
 This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
 
-[**Deploy your own**](https://vercel.com/new/git/external?repository-url=https://github.com/vercel-solutions/nextjs-portfolio-starter&project-name=portfolio&repository-name=portfolio) in a few minutes.
-
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- Twitter [@nojihata_com](https://twitter.com/nojihata_com)
+- GitHub [@nojihata](https://github.com/nojihata)
+- Email nojihata@nojihata.com
