--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,7 +6,7 @@ date: 2022-11-23
 
 # Nojihata
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+I'm a designer for fun.
 
 ---
 
