--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -1,31 +1,35 @@
 ---
 type: page
-title: Photos
-date: 2021-03-18
+title: Designs
+date: 2022-11-23
 ---
 
 # Photos
 
-Here's some of my photography.
+Here's some of my designs.
 
 import Image from 'next/image'
 
-<Image
-  src="/images/photo2.jpg"
-  alt="Photo"
-  width={1125}
-  height={750}
-  priority
-  className="next-image"
-/>
-[Unsplash ↗ ](https://unsplash.com/photos/WeYamle9fDM)
+## Custom Theme Coral Reef for SANGO
 
 <Image
-  src="/images/photo.jpg"
+  src="https://demo.nojihata.com/coral-reef/wp-content/uploads/1.png"
   alt="Photo"
-  width={1125}
-  height={750}
+  width={1200}
+  height={630}
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/ndN00KmbJ1c)
+[Coral Reef ↗ ](https://demo.nojihata.com/coral-reef/)
+
+## Other Designs 
+
+<Image
+  src="https://demo.nojihata.com/wp-content/uploads/aboutme-sngland.png"
+  alt="Photo"
+  width={1200}
+  height={630}
+  priority
+  className="next-image"
+/>
+[Coral Reef ↗ ](https://www.sangoland.app/users/nojihata)
