--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -13,7 +13,7 @@ import Image from 'next/image'
 ## Custom Theme Coral Reef for SANGO
 
 <Image
-  src="https://demo.nojihata.com/coral-reef/wp-content/uploads/1.png"
+  src="/images/1.png/"
   alt="Photo"
   width={1200}
   height={630}
@@ -25,11 +25,11 @@ import Image from 'next/image'
 ## Other Designs 
 
 <Image
-  src="https://demo.nojihata.com/wp-content/uploads/aboutme-sngland.png"
+  src="/images/aboutme-sngland.png/"
   alt="Photo"
   width={1200}
   height={630}
   priority
   className="next-image"
 />
-[Coral Reef ↗ ](https://www.sangoland.app/users/nojihata)
+[SANGO Land ↗ ](https://www.sangoland.app/users/nojihata)
